AC_INIT(check-mime.pl)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gnome-mime-data, 1.0.1)

AM_MAINTAINER_MODE

AC_PROG_INTLTOOL

ALL_LINGUAS="az ca da de el es fi fr ga gl hu it ja ko lt nl nn no pl pt pt_BR ro ru sk sl sv tr uk wa zh_TW"
GETTEXT_PACKAGE=gnome-mime-data
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
gnome-mime-data.spec
po/Makefile.in
gnome-mime-data-2.0.pc
])
